# GTinyEngine

./: .gitattributes  .gitignore  CMakeLists.txt  FUR_IMPLEMENTATION_SUMMARY.md  README.md  VIDEO_PLAYER_FFMPEG_INTEGRATION.md
Examples/Interaction3DOF/: CMakeLists.txt
Examples/LoadModelDemo/: CMakeLists.txt  main.cpp
Examples/MultiPassDemo/: CMakeLists.txt  main.cpp
Examples/MultiPassWithBackgroundDemo/: CMakeLists.txt  main.cpp
Examples/ObserverModeRenderingDemo/: CMakeLists.txt  main.cpp
Examples/PBRMaterialDemo/: CMakeLists.txt  main.cpp
Examples/RenderFurDemo/: CMakeLists.txt  main.cpp
Examples/RendererDemo/: CMakeLists.txt  main.cpp
Examples/ShaderPreprocessorRenderer/: CMakeLists.txt
Examples/ShaderPreprocessorSimpleExample/: CMakeLists.txt  main.cpp
Examples/ShadowRenderingDemo/: CMakeLists.txt
Examples/ShadowRenderingDemo/source/: main.cpp
Examples/TestRenderer/: CMakeLists.txt
Examples/VK_DeferredM1Demo/: CMakeLists.txt
Examples/VK_DeferredM1Demo/source/: main.cpp
Examples/VK_GSRenderDemo/: CMakeLists.txt  README.md
Examples/VK_GSRenderDemo/include/: GSComputeRenderer.h  GSRenderTypes.h  GSSceneLoader.h
Examples/VK_HybridGSRenderDemo/: CMakeLists.txt  HYBRID_GS_DEFERRED_ARCHITECTURE.md
Examples/VK_VertixTriangle/: CMakeLists.txt  README.md
Examples/VideoRenderDemo/: CMakeLists.txt  main.cpp
Examples/VulkanHelloWorld/: CMakeLists.txt
Examples/VulkanPractice1/: CMakeLists.txt
Examples/VulkanPractice2/: CMakeLists.txt
GTVulkan/: CMakeLists.txt
GTVulkan/docs/: GaussianSplat_Optimization_Plan.md
GTVulkan/include/GTVulkan/: VK_Deferred.h  VK_Format.h
GTVulkan/include/GaussianSplat/: GSComputeSubsystem.h  GSRenderDemoApp.h  GSRenderTypes.h
GTVulkan/source/: EasyVulkan.cpp  GlfwGeneral.cpp  VK_Base.cpp  VK_Deferred.cpp  VK_Utils.cpp
GTVulkan/source/GaussianSplat/: GSComputeRenderer.cpp  GSRenderDemoApp.cpp  GSSceneLoader.cpp
TestRenderer/: CMakeLists.txt
TestRenderer/source/: main.cpp
TinyRenderer/: CMakeLists.txt  README.md
TinyRenderer/include/: GUIManager.h  RenderAgent.h  Renderer.h  Renderer_Legacy.h  SandboxCatalog.h  Skybox.h  TinyEngineHostUI.h
TinyRenderer/source/: GUIManager.cpp  RenderAgent.cpp  Renderer.cpp  Renderer_Legacy.cpp  SandboxCatalog.cpp  Skybox.cpp  TinyEngineHostUI.cpp  main.cpp
VulkanHelloWorld/: CMakeLists.txt
VulkanHelloWorld/include/: HelloTriangleApplication.h
VulkanHelloWorld/source/: HelloTriangleApplication.cpp  main.cpp
VulkanPractice1/: CMakeLists.txt
VulkanPractice1/include/: HelloTriangleApplication.h
VulkanPractice1/source/: HelloTriangleApplication.cpp
VulkanSDK/1.3.275.0/: InstallationLog.txt  components.xml  maintenancetool.ini
cmake/: SetSourceGroup.cmake
configuration/: SetVulkanEnv.bat.in  root_dir.h.in
doc/: EngineFramework.md  RenderGraph原理与实现.md  TensorRT与3DGS集成的核心代码片段.md  VulkanLearning.md  imgui_multithreaded_fix.md  imgui_multithreaded_rendering.md  multipass_rendering_system.md  multithreaded_rendering_architecture.md  pbr_rendering_principle.md  phong_light.md  ray_intersection_analysis.md  renderer_api_design.md  rendergraph_visualization_guide.md  shader_preprocessor_usage_guide.md  shadow_mapping_implementation_plan.md  skybox_render_log.md  vulkan_deferred_rendering_framework.md  开发过程问题记录.md
doc/rendergraph/: rendergraph_analysis.md  rendergraph_implementation_summary.md  rendergraph_usage_example.md
include/: Camera.h  FFmpegLoader.h  Fragment.h  Helper.h  Light.h  Model.h  ModelLoader.h  Object.h  ObserverModeObject.h  RenderObject.h  RenderView.h  filesystem.h  shader.h  ultis.h
include/framework/: FrameBuffer.h  FrameSync.h  FullScreenPass.h  FullscreenQuad.h  FurRenderPass.h  LightSpaceMatrix.h  RenderCommandQueue.h  RenderContext.h  RenderGraph.h  RenderGraphVisualizer.h  RenderPass.h  RenderPassFlag.h  RenderPassManager.h  RenderThread.h  Renderer.h  VulkanDeferredPipeline.h  VulkanGeometryPass.h  VulkanGpuDebug.h  VulkanLightingPass.h  VulkanPostProcessPass.h  VulkanPresentPass.h
include/geometry/: BasicGeometry.h  Clippable.h  FurGeometryGenerator.h  IEffectLayersSource.h  Sphere.h  Torus.h
include/materials/: BaseMaterial.h  BlinnPhongMaterial.h  BlitMaterial.h  FurMaterial.h  GeometryMaterial.h  LightingMaterial.h  PBRMaterial.h  ShadowDepthMaterial.h  SkyboxMaterial.h  StencilClippingEffect.h
include/math/: GTSIMD.h
include/mesh/: AaBB.h  Mesh.h  Vertex.h
include/sandbox/: ISandbox.h  Sandbox_RendererDemo.h  Sandbox_ShadowRenderingDemo.h  Sandbox_TinyRenderer.h
include/shader/: ShaderPreprocessor.h
include/textures/: Texture.h
include/video/: VideoGeometry.h  VideoMaterial.h  VideoPlayer.h  VideoTexture.h
resources/shaders/: basic.fs  basic.vs
resources/shaders/common/: blit.fs  (+6 more)
source/: Camera.cpp  Fragment.cpp  Light.cpp  Model.cpp  ModelLoader.cpp  Object.cpp  ObserverModeObject.cpp  RenderObject.cpp  RenderView.cpp  shader.cpp  utils.cpp
source/framework/: FrameBuffer.cpp  FrameSync.cpp  FullScreenPass.cpp  FullscreenQuad.cpp  FurRenderPass.cpp  LightSpaceMatrix.cpp  RenderCommandQueue.cpp  RenderContext.cpp  RenderGraph.cpp  RenderGraphVisualizer.cpp  RenderPass.cpp  RenderPassFlag.cpp  RenderPassManager.cpp  RenderThread.cpp  Renderer.cpp  ShadowPass.cpp  VulkanDeferredPipeline.cpp  VulkanGeometryPass.cpp  VulkanGpuDebug.cpp  VulkanLightingPass.cpp  VulkanPostProcessPass.cpp  VulkanPresentPass.cpp
source/geometry/: BasicGeometry.cpp  Clippable.cpp  FurGeometryGenerator.cpp  Sphere.cpp  Torus.cpp
source/materials/: BaseMaterial.cpp  BlinnPhongMaterial.cpp  BlitMaterial.cpp  FurMaterial.cpp  GeometryMaterial.cpp  LightingMaterial.cpp  PBRMaterial.cpp  ShadowDepthMaterial.cpp  SkyboxMaterial.cpp  StencilClippingEffect.cpp
source/math/: GTSIMD.cpp
source/mesh/: AaBB.cpp  Mesh.cpp  Vertex.cpp
source/sandbox/: ISandbox.cpp  Sandbox_RendererDemo.cpp  Sandbox_ShadowRenderingDemo.cpp  Sandbox_TinyRenderer.cpp
source/shader/: ShaderPreprocessor.cpp
source/skybox/: Skybox.cpp
source/textures/: Texture.cpp
source/video/: VideoGeometry.cpp  VideoMaterial.cpp  VideoPlayer.cpp  VideoTexture.cpp
(+55 files in other folders)
